// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DisplayPostCard with post 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 8,
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "cursor": "pointer",
          "fontWeight": 500,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 5,
          "position": "relative",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "paddingRight": "90px",
            "verticalAlign": "top",
            "whiteSpace": "normal",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 15,
              "muiPrepared": true,
            }
          }
        >
          <span>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              Bobby L. Booker
               |
               
              <span
                style={
                  Object {
                    "fontSize": 16,
                    "fontWeight": 200,
                  }
                }
              >
                Posted
              </span>
            </h3>
          </span>
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          Published: Wednesday, March 28, 2018
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
        }
      }
    >
      Bobby L. Booker
       is an English poet, playwright and actor, widely regarded as the greatest writer in the English language.
    </div>
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "muiPrepared": true,
          "padding": 16,
        }
      }
    >
      <span>
        Post: 
        Want to grab pizza
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "display": "block",
            "fontSize": 14,
            "marginBottom": "5px",
          }
        }
      >
        Updated: 
        Wednesday, March 28, 2018
      </span>
      <span
        style={
          Object {
            "color": "#3636d6",
            "cursor": "pointer",
            "fontSize": "small",
            "fontWeight": 100,
            "textDecoration": "underline",
          }
        }
      >
        show less
      </span>
    </div>
  </div>
</div>
`;

exports[`renders DisplayPostCard without post 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "cursor": "pointer",
          "fontWeight": 500,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 5,
          "position": "relative",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "paddingRight": "90px",
            "verticalAlign": "top",
            "whiteSpace": "normal",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 15,
              "muiPrepared": true,
            }
          }
        >
          <span>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              Bobby L. Booker
               |
               
              <span
                style={
                  Object {
                    "fontSize": 16,
                    "fontWeight": 200,
                  }
                }
              >
                Posted
              </span>
            </h3>
          </span>
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          Published: Wednesday, March 28, 2018
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
        }
      }
    >
      Bobby L. Booker
       is an English poet, playwright and actor, widely regarded as the greatest writer in the English language.
    </div>
    <div
      style={
        Object {
          "color": "#3636d6",
          "cursor": "pointer",
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
          "textDecoration": "underline",
        }
      }
    >
      show more
    </div>
  </div>
</div>
`;

exports[`renders DisplaySharedCard with shared url 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 8,
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "cursor": "pointer",
          "fontWeight": 500,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 5,
          "position": "relative",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "paddingRight": "90px",
            "verticalAlign": "top",
            "whiteSpace": "normal",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 15,
              "muiPrepared": true,
            }
          }
        >
          <span>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              Yole Fonseca Otero
               |
               
              <span
                style={
                  Object {
                    "fontSize": 16,
                    "fontWeight": 200,
                  }
                }
              >
                Shared
              </span>
            </h3>
          </span>
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          Published: Wednesday, March 28, 2018
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
        }
      }
    >
      Yole Fonseca Otero
       is an English writer and social critic. He created some of the world's best-known fictional characters and is regarded by many as the greatest novelist.
    </div>
    <div
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontSize": 14,
          "muiPrepared": true,
          "padding": 16,
        }
      }
    >
      <span>
        Shared:
         
        <a
          href="https://www.flipgive.com/"
          target="_blank"
        >
          https://www.flipgive.com/
        </a>
      </span>
      <span
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.54)",
            "display": "block",
            "fontSize": 14,
            "marginBottom": "5px",
          }
        }
      >
        Updated: 
        Wednesday, March 28, 2018
      </span>
      <span
        style={
          Object {
            "color": "#3636d6",
            "cursor": "pointer",
            "fontSize": "small",
            "fontWeight": 100,
            "textDecoration": "underline",
          }
        }
      >
        show less
      </span>
    </div>
  </div>
</div>
`;

exports[`renders DisplaySharedCard without shared url 1`] = `
<div
  style={
    Object {
      "WebkitTapHighlightColor": "rgba(0,0,0,0)",
      "backgroundColor": "#ffffff",
      "borderRadius": 2,
      "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
             0 1px 4px rgba(0, 0, 0, 0.12)",
      "boxSizing": "border-box",
      "color": "rgba(0, 0, 0, 0.87)",
      "fontFamily": "Roboto, sans-serif",
      "muiPrepared": true,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "zIndex": 1,
    }
  }
>
  <div
    style={
      Object {
        "paddingBottom": 0,
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "boxSizing": "border-box",
          "cursor": "pointer",
          "fontWeight": 500,
          "muiPrepared": true,
          "padding": 16,
          "paddingBottom": 5,
          "position": "relative",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "muiPrepared": true,
            "paddingRight": "90px",
            "verticalAlign": "top",
            "whiteSpace": "normal",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "display": "block",
              "fontSize": 15,
              "muiPrepared": true,
            }
          }
        >
          <span>
            <h3
              style={
                Object {
                  "marginBottom": 0,
                }
              }
            >
              Yole Fonseca Otero
               |
               
              <span
                style={
                  Object {
                    "fontSize": 16,
                    "fontWeight": 200,
                  }
                }
              >
                Shared
              </span>
            </h3>
          </span>
        </span>
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "display": "block",
              "fontSize": 14,
              "muiPrepared": true,
            }
          }
        >
          Published: Wednesday, March 28, 2018
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
        }
      }
    >
      Yole Fonseca Otero
       is an English writer and social critic. He created some of the world's best-known fictional characters and is regarded by many as the greatest novelist.
    </div>
    <div
      style={
        Object {
          "color": "#3636d6",
          "cursor": "pointer",
          "fontSize": "small",
          "fontWeight": 100,
          "padding": "0px 15px",
          "paddingBottom": 10,
          "textDecoration": "underline",
        }
      }
    >
      show more
    </div>
  </div>
</div>
`;
